--- a/assets/css/sass/_classes.scss
+++ b/assets/css/sass/_classes.scss
@@ -29,5 +29,5 @@ h1.page-title {
   font-size: 3rem;
   font-weight: 600;
   letter-spacing: 1px;
-  margin-bottom: $base-spacing * 2;
+  margin-bottom: $spacing-double;
 }
