--- a/assets/css/sass/_header.scss
+++ b/assets/css/sass/_header.scss
@@ -7,7 +7,7 @@
 .storefront-secondary-navigation {
   .site-header {
     .storefront-primary-navigation {
-      padding: 0 $nav-spacing * 2;
+      padding: 0 $spacing-half * 2;
     }
 
     .preheader {
@@ -20,7 +20,7 @@
   .home.blog .site-header,
   .home.page:not(.page-template-template-homepage) .site-header,
   .home.post-type-archive-product .site-header {
-    margin-bottom: $base-spacing * 2.1;
+    margin-bottom: $spacing-double;
   }
 
   .header-bottom {
@@ -44,7 +44,7 @@
         @include span(12);
         background-color: $dark-background;
         display: inline-block;
-        padding: 0 $nav-spacing;
+        padding: 0 $spacing-half;
 
         a {
           @include preheader-text;
@@ -68,13 +68,13 @@
 
       .storefront-primary-navigation {
         background-color: $brand-primary-dark;
-        padding: 0 $nav-spacing;
+        padding: 0 $spacing-half;
 
         .main-navigation {
           @include span(9 or 12);
           @include nav-container;
           float: none;
-          margin: $nav-spacing * 1.7 0 $nav-spacing * 1.7 $nav-spacing;
+          margin: $spacing-half * 1.7 0 $spacing-half * 1.7 $spacing-half;
 
           li {
             a {
@@ -84,7 +84,7 @@
             &:not(.nav-button) {
               a {
                 font-size: 1.2rem;
-                padding: $nav-spacing * 1.16 $nav-spacing;
+                padding: $spacing-half * 1.16 $spacing-half;
 
                 &:hover,
                 &.focus {
@@ -119,7 +119,7 @@
         .site-branding {
           @include span(3 or 12);
           @include nav-container;
-          margin: $nav-spacing * 1.8 0;
+          margin: $spacing-half * 1.8 0;
 
           img {
             margin: auto;
