--- a/assets/css/sass/_hero_banner.scss
+++ b/assets/css/sass/_hero_banner.scss
@@ -1,7 +1,7 @@
 @include susy-media($desktop) {
   .home {
     .hero-banner {
-      margin-top: $base-spacing * -3;
+      margin-top: ($base-spacing * -3);
     }
   }
 
@@ -12,23 +12,23 @@
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
-      margin-bottom: $base-spacing * 4;
+      margin-bottom: ($spacing-double * 2);
       min-height: 600px;
-      padding: $base-spacing * 4 $base-spacing * 2;
+      padding: ($spacing-double * 2) $spacing-double;
 
       h1 {
         @include text-center;
         color: $white;
-        font-size: $base-spacing * 2;
+        font-size: $spacing-double;
         font-weight: 700;
-        margin-bottom: $base-spacing * 2;
+        margin-bottom: $spacing-double;
       }
 
       .banner-text {
         @include text-center;
         color: $white;
         font-size: $base-spacing;
-        margin-bottom: $base-spacing * 1.5;
+        margin-bottom: $spacing-onehalf;
       }
 
       .button-wrapper {
