--- a/assets/css/sass/_post_loop.scss
+++ b/assets/css/sass/_post_loop.scss
@@ -1,5 +1,3 @@
-$polaroid-spacing: $base-spacing / 3;
-
 .posts-grid {
   @include slant;
   display: flex;
@@ -10,7 +8,7 @@ $polaroid-spacing: $base-spacing / 3;
   .post-panel {
     @include grid-cell(.5, 4);
     @include polaroid;
-    margin-bottom: $base-spacing / 2;
+    margin-bottom: $spacing-half;
     outline: none !important;
     overflow-y: hidden;
     text-decoration: none !important;
@@ -21,16 +19,16 @@ $polaroid-spacing: $base-spacing / 3;
 
     .text-wrapper {
       background-image: url('./assets/images/polaroid-light.png');
-      margin-bottom: $base-spacing * -5;
-      margin-top: $base-spacing * -.5;
-      padding-bottom: $base-spacing * 5 + $polaroid-spacing;
-      padding-top: $base-spacing / 2;
+      margin-bottom: (-$spacing-huge);
+      margin-top: (-$spacing-half);
+      padding-bottom: ($spacing-huge + $spacing-third);
+      padding-top: $spacing-half;
 
       .text-title {
         @include text-center;
         font-size: 1rem;
         margin-bottom: 0;
-        padding: 0 $polaroid-spacing;
+        padding: 0 $spacing-third;
 
         &::after {
           background: $grey;
@@ -48,7 +46,7 @@ $polaroid-spacing: $base-spacing / 3;
     .wp-post-image {
       border-radius: 0;
       margin-bottom: 0;
-      padding: $polaroid-spacing;
+      padding: $spacing-third;
     }
   }
 }
