--- a/assets/css/sass/_single_product.scss
+++ b/assets/css/sass/_single_product.scss
@@ -18,11 +18,11 @@
 
 .wc-bookings-booking-form {
   label {
-    margin-right: $base-spacing / 4;
+    margin-right: $spacing-qtr;
   }
 
   .block-picker {
-    margin: 0 0 $base-spacing / 2;
+    margin: 0 0 $spacing-half;
 
     li {
       a.selected,
@@ -36,7 +36,7 @@
 
   .form-field {
     display: inline-block;
-    margin: 0 0 $base-spacing / 4;
+    margin: 0 0 $spacing-qtr;
 
     > .full-width {
       display: flex;
@@ -51,7 +51,7 @@
       &[type] {
         margin-left: auto;
         max-height: 45px;
-        padding: $base-spacing / 4;
+        padding: $spacing-qtr;
         width: auto;
       }
     }
@@ -68,12 +68,12 @@
 
     .entry-summary {
       @include sloped-bottom(2, 'trapezoid', 'shallow');
-      padding: $base-spacing / 4;
+      padding: $spacing-qtr;
 
       .cart {
         background-color: $brand-primary;
         color: $black;
-        padding: $base-spacing / 2;
+        padding: $spacing-half;
 
         .ui-datepicker-calendar {
           background-color: $white;
@@ -95,19 +95,19 @@
 
     .tour-header {
       @include text-shadow;
+      @include border-radius-top;
       background-color: $brand-secondary;
-      border-radius: 5px 5px 0 0;
       box-shadow: 0 3px 3px $grey;
       color: $white;
-      margin: $base-spacing * -.5 $base-spacing * -.5 $base-spacing * .5;
-      padding: $base-spacing / 4 $base-spacing / 4 $base-spacing / 2;
+      margin: (-$spacing-half) (-$spacing-half) $spacing-half;
+      padding: $spacing-qtr $spacing-qtr $spacing-half;
     }
 
     .tour-switcher-wrapper {
-      margin: $base-spacing * -.5 $base-spacing * -.5 $base-spacing * 1.5;
+      margin: (-$spacing-half) (-$spacing-half) $spacing-onehalf;
 
       .tour-switcher {
-        border-radius: 5px 5px 0 0;
+        @include border-radius-top;
         color: $white;
         display: flex;
 
@@ -121,14 +121,14 @@
           display: inline-block;
           opacity: .8;
           outline: none;
-          padding: $base-spacing * .75;
+          padding: $base-spacing;
           text-align: center;
 
           &.active {
             background-color: $brand-secondary;
             clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
             cursor: default;
-            margin-bottom: $base-spacing * -.5;
+            margin-bottom: (-$spacing-half);
             opacity: 1;
           }
         }
@@ -136,14 +136,14 @@
     }
 
     .product-tour-wrapper {
-      padding: $base-spacing / 4;
+      padding: $spacing-qtr;
 
       .product-tour {
         @include box-shadow;
+        @include border-radius-all;
         background-color: $white;
-        border-radius: 5px;
         margin-bottom: $base-spacing;
-        padding: $base-spacing / 2;
+        padding: $spacing-half;
 
         h4 {
           font-size: 1.2rem;
@@ -151,7 +151,7 @@
         }
 
         .detail-item {
-          margin-bottom: $base-spacing / 2;
+          margin-bottom: $spacing-half;
         }
 
         .tour-content-wrapper {
