--- a/assets/css/sass/utils/_mixins.scss
+++ b/assets/css/sass/utils/_mixins.scss
@@ -6,7 +6,7 @@
 @mixin preheader-text {
   color: $light-text;
   font-size: 1.1rem;
-  padding: $base-spacing / 4 $base-spacing / 2;
+  padding: $spacing-qtr $spacing-half;
 }
 
 @mixin transition-color {
@@ -23,6 +23,14 @@
 
 @mixin shadow-border-bottom {
   box-shadow: 0 0 10px 5px $brand-primary-dark;
+}
+
+@mixin border-radius-all {
+  border-radius: $border-radius;
+}
+
+@mixin border-radius-top {
+  border-radius: $border-radius $border-radius 0 0;
 }
 
 @mixin box-shadow {
